Only prevent scrolling on mobile, in case someone resizes the window when the mobile menu is still open.

--- a/varya/assets/sass/base/_reset.scss
+++ b/varya/assets/sass/base/_reset.scss
@@ -77,10 +77,13 @@ body {
 	text-align: left;
 	background-color: var(--global--color-background);
 	
+
 	// Keep the menu pinned to the top when the menu is open.
-	&.menu-open {
-		position: fixed;
-		max-width: 100%;
+	@include media(mobile) {
+		&.menu-open {
+			position: fixed;
+			max-width: 100%;
+		}
 	}
 }
 
